# pygfried

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  TODO.md  go.mod  go.sum  hatch_build.py  pygfried.go  pygfried_detailed_test.go  pygfried_test.go  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/scripts/: smoke-install.sh  validate-release-inputs.sh
.github/workflows/: _build.yml  ci.yml  release.yml  validate-action-pinning.yml
pygfried/: __init__.pyi
pylib/: main.go  support.c
tests/: conftest.py  pygfried_test.py
