[metadata]
name = pygfried
version = 0.3.0
description = Siegfried as a Python extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/artefactual-labs/pygfried
author = Artefactual Systems Inc.
author_email = info@artefactual.com
license = Apache 2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.7
setup_requires =
    setuptools-golang~=2.7
tests_requires =
    pytest
